upload lecture3 and 4

--- a/course/dl4mt21fa/hw1/dl4mt_hw1.tex
+++ b/course/dl4mt21fa/hw1/dl4mt_hw1.tex
@@ -42,7 +42,7 @@
 \headheight 35pt
 \lhead{Instructor: Lei Li}
 \chead{\textbf{\Large DL4MT Homework \hwnumber}}
-\rhead{\course \\ \today}
+\rhead{\course \\ September 27, 2021}%\today}
 \lfoot{}
 \cfoot{}
 \rfoot{\small\thepage}
@@ -109,9 +109,11 @@ You may use basic python package (for example the \texttt{argparse} library for 
 \paragraph{output.txt}
 \begin{verbatim}
   .</w>
+  A</w>
+  K</w>
+  L
   a
   a</w>
-  A</w>
   c
   ce</w>
   d</w>
@@ -120,8 +122,6 @@ You may use basic python package (for example the \texttt{argparse} library for 
   f</w>
   h</w>
   i
-  K</w>
-  L
   m
   n
   n</w>
