--- a/leili.bib
+++ b/leili.bib
@@ -17,6 +17,17 @@
   eprint  = {https://arxiv.org/abs/2106.15947},
 }
 
+@InProceedings{zheng2021duplex,
+  author    = {Zaixiang Zheng and Hao Zhou and Shujian Huang and Jiajun Chen and Jingjing Xu and Lei Li},
+  booktitle = {the 35th Conference on Neural Information Processing Systems (NeurIPS)},
+  title     = {Duplex Sequence-to-Sequence Learning for Reversible Machine Translation},
+  year      = {2021},
+  month     = dec,
+  abstract  = {In this work, we design a simple, direct, and fast framework for instance segmentation with strong performance. To this end, we propose a novel and effective approach, termed SOLOv2, following the principle of the SOLO method. First, our new framework is empowered by an efficient and holistic instance mask representation scheme, which dynamically segments each instance in the image, without resorting to bounding box detection. Specifically, the object mask generation is decoupled into a mask kernel prediction and mask feature learning, which are responsible for generating convolution kernels and the feature maps to be convolved with, respectively. Second, SOLOv2 significantly reduces inference overhead with our novel matrix non-maximum suppression (NMS) technique. Our Matrix NMS performs NMS with parallel matrix operations in one shot, and yields better results. We demonstrate that the proposed SOLOv2 achieves the state-of-the- art performance with high efficiency, making it suitable for both mobile and cloud applications. A light-weight version of SOLOv2 executes at 31.3 FPS and yields 37.1% AP on COCO test-dev. Moreover, our state-of-the-art results in object detection (from our mask byproduct) and panoptic segmentation show the potential of SOLOv2 to serve as a new strong baseline for many instance-level recognition tasks.},
+  eprint    = {https://arxiv.org/abs/2105.03458},
+  owner     = {lilei.02},
+}
+
 @InProceedings{jiang2021learning,
   author    = {Qingnan Jiang and Mingxuan Wang and Jun Cao and Shanbo Cheng and Shujian Huang and Lei Li},
   booktitle = {the Conference on Empirical Methods in Natural Language Processing (EMNLP)},
@@ -190,6 +201,7 @@ The code and dataset are publicly available at \url{https://github.com/rgwt123/S
   title     = {Vocabulary Learning via Optimal Transport for Neural Machine Translation},
   year      = {2021},
   month     = aug,
+  addendum  = {ACL Best Paper Award (1/3350)},
   code      = {https://github.com/Jingjing-NLP/VOLT},
   eprint    = {https://arxiv.org/abs/2012.15671},
   timestamp = {2020-05-01},
