adding reading list

--- a/course/dl4mt21fa/hw3/dl4mt_hw3.tex
+++ b/course/dl4mt21fa/hw3/dl4mt_hw3.tex
@@ -51,7 +51,7 @@
 \begin{document}
 
 
-\section*{Problem 1: Neural Machine Translation Decoding} 
+\section*{Problem 1: Neural Machine Translation Decoding (50')} 
 In this homework, you will implement a decoder for the Transformer-LSTM model 
 implemented last time. 
 For the basic version, please implement a decoder with the beam search algorithm. 
@@ -105,10 +105,10 @@ For testing purpose, you may the the data at \url{http://data.statmt.org/wmt21/t
 
 Further information can be found on \url{http://statmt.org/wmt21/translation-task.html}.
 
-The submission file should include your source code, your trained model, a report stating the BLEU score you get on the WMT21 test data. 
+The submission file should include your source code, your trained model, a report stating the BLEU score evaluated on the WMT21 En-Ha test data. 
 
-\section*{Problem 2: Machine Translation Platform Experience} 
-A machine translation product does not only include a model. There are systems, ui, business model, and more aspects involved. 
+\section*{Problem 2: Machine Translation Platform Experience (50')} 
+A machine translation product does not only include a model. There are systems, UI, business model, and more aspects involved. 
 In this assignment, you will use the VolcEngine TranStudio platform to translate a video from the class into a target language, and make corrections. 
 The platform can be accessed at \url{https://translate.volcengine.cn/transtudio/}. You will use your email (the email address for your course enrollment) for login name, and email prefix for password. 
 The platform supports target langauges in Chinese, Japanese, and Korean (our video source language is English).  If you are not familiar with any of these languages, please let the instructor know and we will provide a separate video in Chinese, and please choose English as the target langauge in this case. 
@@ -116,8 +116,10 @@ The platform supports target langauges in Chinese, Japanese, and Korean (our vid
 The platform is self-explanatory. After you create a project and upload a video, it will create an initial translation result using NMT. You may choose to edit the source text and/or the target text. You may also split or merge sentences. 
 Please try your best to make the translation accurate. You assigned portion can be found in this doc (\url{https://tinyurl.com/2cumrh25}). You may download the videos from Gauchospace. 
 
-In your report (please use the same report document as the previous problem), please state the section you are translating, the source langauge, the target language, and summarize your experiment and feedback for the system, in terms of the userability and translation quality. Please list good and nontrival cases which you think automatic translation does surprisingly well, and bad cases which the translation system does really bad. 
-Please use your guess to analyze the cases why the NMT system produces such errors and any possible ways to improve. This is open-ended. 
+In your report (please use the same report document as the previous problem), please state the section you are translating, the source langauge, the target language, and summarize your experiment and feedback for the system, in terms of the userability and translation quality. Please analyze good and nontrival cases which you think automatic translation does surprisingly well, and bad cases which the translation system does really bad. 
+Please use your knowledge to analyze the cases why the NMT system produces such errors and any possible ways to improve. This is open-ended. 
+
+(Estimated work duration: around 3 hours)
 
 \section*{Acknowledgement}
 We thank VolcTrans (\url{https://translate.volcengine.cn}) for providing the cloud resource used in this homework. 
