--- a/course/dl4mt21fa/hw3/dl4mt_hw3.tex
+++ b/course/dl4mt21fa/hw3/dl4mt_hw3.tex
@@ -118,6 +118,7 @@ Please try your best to make the translation accurate. You assigned portion can 
 
 In your report (please use the same report document as the previous problem), please state the section you are translating, the source langauge, the target language, and summarize your experiment and feedback for the system, in terms of the userability and translation quality. Please analyze good and nontrival cases which you think automatic translation does surprisingly well, and bad cases which the translation system does really bad. 
 Please use your knowledge to analyze the cases why the NMT system produces such errors and any possible ways to improve. This is open-ended. 
+Your final submission should include both the report and an exported subtitle file with both the source language and the target language. 
 
 (Estimated work duration: around 3 hours)
 
