--- a/leili.bib
+++ b/leili.bib
@@ -37,6 +37,7 @@
   abstract  = {How to effectively adapt neural machine translation  (NMT)  models  according  to  emergingcases  without  retraining?    Despite  the  greatsuccess  of  neural  machine  translation,  updating the deployed models online remains a challenge. Existing  non-parametric  approachesthat retrieve similar examples from a databaseto guide the translation process are promisingbut are prone to overfit the retrieved examples. However,  non-parametric  methods  are  proneto overfit the retrieved examples. In this work,we propose to learn Kernel-Smoothed Translation with Example Retrieval (KSTER), an effective approach to adapt neural machine translation models online.  Experiments on domainadaptation and multi-domain machine translation  datasets  show  that  even  without  expensive retraining, KSTER is able to achieve im-provement  of  1.1  to  1.5  BLEU  scores  overthe  best  existing  online  adaptation  methods. The  code  and  trained  models  are  released  at https://github.com/jiangqn/KSTER.},
   code      = {https://github.com/jiangqn/KSTER},
   eprint    = {https://arxiv.org/abs/2109.09991},
+  video     = {https://underline.io/lecture/38697-learning-kernel-smoothed-machine-translation-with-retrieved-examples},
 }
 
 @InProceedings{ru2021learning,
@@ -47,6 +48,7 @@
   month     = nov,
   abstract  = {Document-level relation extraction aims to identify relations between entities in a whole document. Prior efforts to capture long-range dependencies have relied heavily on implicitly powerful representations learned through (graph) neural networks, which makes the model less transparent. To tackle this challenge, in this paper, we propose LogiRE, a novel probabilistic model for document-level relation extraction by learning logic rules. LogiRE treats logic rules as latent variables and consists of two modules: a rule generator and a relation extractor. The rule generator is to generate logic rules potentially contributing to final predictions, and the relation extractor outputs final predictions based on the generated logic rules. Those two modules can be efficiently optimized with the expectation--maximization (EM) algorithm. By introducing logic rules into neural networks, LogiRE can explicitly capture long-range dependencies as well as enjoy better interpretation. Empirical results show that LogiRE significantly outperforms several strong baselines in terms of relation performance (∼1.8 F1 score) and logical consistency (over 3.3 logic score). Our code is available at https://github. com/rudongyu/LogiRE.},
   code      = {https://github.com/rudongyu/LogiRE},
+  video     = {https://underline.io/lecture/38055-learning-logic-rules-for-document-level-relation-extraction},
 }
 
 @InProceedings{zeng2021gradient,
@@ -56,6 +58,7 @@
   year      = {2021},
   month     = nov,
   code      = {https://github.com/parZival27/GrAdualCC},
+  eprint    = {https://aclanthology.org/2021.emnlp-main.337/},
 }
 
 @InProceedings{sun2021multilingual,
@@ -240,6 +243,8 @@ The code and dataset are publicly available at \url{https://github.com/rgwt123/S
   month     = aug,
   code      = {https://github.com/dqwang122/CALMS},
   timestamp = {2020-05-01},
+  url       = {https://dqwang122.github.io/projects/CALMS/},
+  video     = {https://underline.io/lecture/26333-contrastive-aligned-joint-learning-for-multilingual-summarization},
 }
 
 @InProceedings{wu2021language,
@@ -1788,7 +1793,7 @@ clickbait detection and generic text classification tasks demonstrate that our p
   year      = {2009},
   address   = {New York, NY, USA},
   publisher = {ACM},
-  file      = {:pubs/li2009dynammo - DynaMMo_ Mining and Summarization of Coevolving Sequences with Missing Values.pdf:PDF;Source repo:https\:/github.com/lileicc/dynammo:URL},
+  code      = {https://github.com/lileicc/dynammo},
   isbn      = {978-1-60558-193-4},
   location  = {Paris, France},
   owner     = {leili},
@@ -1933,12 +1938,6 @@ clickbait detection and generic text classification tasks demonstrate that our p
   year      = {2006},
   pages     = {628--639},
   file      = {:pubs/li2006providing - Providing an Uncertainty Reasoning Service for Semantic Web Application.pdf:PDF},
-}
-
-@Unpublished{baiDraftself,
-  author = {Hongxiao Bai and Mingxuan Wang and Hai Zhao and Lei Li},
-  title  = {Self-Training with Heterogeneous Teachers Improves Neural Machine Translation},
-  year   = {Draft},
 }
 
 @Unpublished{baoDraftpnat,
