Add AAAI 2022 papers

--- a/leili.bib
+++ b/leili.bib
@@ -506,6 +506,33 @@ The code and dataset are publicly available at \url{https://github.com/rgwt123/S
   comment     = {用于推送信息的方法和装置},
 }
 
+
+@InProceedings{huang2022non,
+  author    = {Chenyang Huang and Hao Zhou and Osmar Zaiane and Lili Mou and Lei Li},
+  booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence (AAAI)},
+  title     = {Non-Autoregressive Translation with Layer-Wise Prediction and Deep Supervision},
+  year      = {2022},
+  month     = feb,
+  eprint    = {https://arxiv.org/abs/2110.07515},
+}
+
+@InProceedings{chen2022loren,
+  author    = {Jiangjie Chen and Qiaoben Bao and Changzhi Sun and Xinbo Zhang and Jiaze Chen and Hao Zhou and Yanghua Xiao and Lei Li},
+  booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence (AAAI)},
+  title     = {LOREN: Logic-Regularized Reasoning for Interpretable Fact Verification},
+  year      = {2022},
+  month     = feb,
+  eprint    = {https://arxiv.org/abs/2012.13577},
+}
+
+@InProceedings{chen2022unsupervised,
+  author    = {Jiangjie Chen and Chun Gan and Sijie Cheng and Hao Zhou and Yanghua Xiao and Lei Li},
+  booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence (AAAI)},
+  title     = {Unsupervised Editing for Counterfactual Stories},
+  year      = {2022},
+  month     = feb,
+}
+
 @InProceedings{dong2021consecutive,
   author    = {Qianqian Dong and Mingxuan Wang and Hao Zhou and Shuang Xu and Bo Xu and Lei Li},
   booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence (AAAI)},
