adding draft papers

--- a/leili.bib
+++ b/leili.bib
@@ -1970,11 +1970,12 @@ clickbait detection and generic text classification tasks demonstrate that our p
 @Unpublished{baoDraftpnat,
   author = {Yu Bao and Hao Zhou and Jiangtao Feng and Mingxuan Wang and Shujian Huang and Jiajun Chen and Lei Li},
   note   = {in submission},
+  eprint = {https://arxiv.org/abs/1911.10677},
   title  = {{PNAT}: Non-autoregressive Transformer by Position Learning},
   year   = {Draft},
 }
 
-@Unpublished{liDraftbidirectional,
+@Noshow{liDraftbidirectional,
   author = {Mingwei Li and Qingyuan Jiang and Yi He and Lei Li and Wujun Li},
   title  = {Bidirectional Attentive Convolutional Neural Network for Near-Duplicate Video Retrieval},
   year   = {Draft},
@@ -1982,11 +1983,12 @@ clickbait detection and generic text classification tasks demonstrate that our p
 
 @Unpublished{sunDraftdiving,
   author = {Zewei Sun and Mingxuan Wang and Hao Zhou and Chengqi Zhao and Shujian Huang and Jiajun Chen and Lei Li},
-  title  = {Diving into Document-Level Neural Machine Translation},
+  title  = {Capturing Longer Context for Document-level Neural Machine Translation: A Multi-resolutional Approach},
+  eprint = {https://arxiv.org/abs/2010.08961},
   year   = {Draft},
 }
 
-@Unpublished{tianDraftconversational,
+@Noshow{tianDraftconversational,
   author = {Youzhi Tian and Zhou Yu and Cheng Yang and Hang Li and Lei Li},
   title  = {Conversational Contextualized Multimodal Representation Learning},
   year   = {Draft},
@@ -1995,6 +1997,7 @@ clickbait detection and generic text classification tasks demonstrate that our p
 @Unpublished{yanDraftcross,
   author = {An Yan and Xin Wang and Jiangtao Feng and Lei Li and William Yang Wang},
   title  = {Cross-Lingual Vision-Language Navigation},
+  eprint = {https://arxiv.org/abs/1910.11301},
   year   = {Draft},
 }
 
