--- a/leili.bib
+++ b/leili.bib
@@ -1,4 +1,33 @@
-% Encoding: UTF-8
+@InProceedings{chen2022loren,
+  author    = {Jiangjie Chen and Qiaoben Bao and Changzhi Sun and Xinbo Zhang and Jiaze Chen and Hao Zhou and Yanghua Xiao and Lei Li},
+  booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence (AAAI)},
+  title     = {{LOREN}: Logic-Regularized Reasoning for Interpretable Fact Verification},
+  year      = {2022},
+  month     = feb,
+  code      = {https://github.com/jiangjiechen/LOREN},
+  eprint    = {https://arxiv.org/abs/2012.13577},
+  url       = {https://huggingface.co/spaces/Jiangjie/loren-fact-checking},
+}
+
+@InProceedings{chen2022unsupervised,
+  author    = {Jiangjie Chen and Chun Gan and Sijie Cheng and Hao Zhou and Yanghua Xiao and Lei Li},
+  booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence (AAAI)},
+  title     = {Unsupervised Editing for Counterfactual Stories},
+  year      = {2022},
+  month     = feb,
+  code      = {https://github.com/jiangjiechen/EDUCAT},
+  eprint    = {https://arxiv.org/abs/2112.05417},
+}
+
+
+@InProceedings{huang2022non,
+  author    = {Chenyang Huang and Hao Zhou and Osmar Zaiane and Lili Mou and Lei Li},
+  booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence (AAAI)},
+  title     = {Non-Autoregressive Translation with Layer-Wise Prediction and Deep Supervision},
+  year      = {2022},
+  month     = feb,
+  eprint    = {https://arxiv.org/abs/2110.07515},
+}
 
 @Article{chu2021icm,
   author  = {Ruihang Chu and Yukang Chen and Tao Kong and Lu Qi and Lei Li},
@@ -26,6 +55,16 @@
   abstract  = {In this work, we design a simple, direct, and fast framework for instance segmentation with strong performance. To this end, we propose a novel and effective approach, termed SOLOv2, following the principle of the SOLO method. First, our new framework is empowered by an efficient and holistic instance mask representation scheme, which dynamically segments each instance in the image, without resorting to bounding box detection. Specifically, the object mask generation is decoupled into a mask kernel prediction and mask feature learning, which are responsible for generating convolution kernels and the feature maps to be convolved with, respectively. Second, SOLOv2 significantly reduces inference overhead with our novel matrix non-maximum suppression (NMS) technique. Our Matrix NMS performs NMS with parallel matrix operations in one shot, and yields better results. We demonstrate that the proposed SOLOv2 achieves the state-of-the- art performance with high efficiency, making it suitable for both mobile and cloud applications. A light-weight version of SOLOv2 executes at 31.3 FPS and yields 37.1% AP on COCO test-dev. Moreover, our state-of-the-art results in object detection (from our mask byproduct) and panoptic segmentation show the potential of SOLOv2 to serve as a new strong baseline for many instance-level recognition tasks.},
   eprint    = {https://arxiv.org/abs/2105.03458},
   owner     = {lilei.02},
+}
+
+@InProceedings{qian2021volctrans,
+  author       = {Lihua Qian and Yi Zhou and Zaixiang Zheng and Yaoming Zhu and Zehui Lin and Jiangtao Feng and Shanbo Cheng and Lei Li and Mingxuan Wang and Hao Zhou},
+  booktitle    = {Sixth Conference on Machine Translation (WMT21)},
+  title        = {The {Volctrans} {GLAT} System: Non-autoregressive Translation Meets {WMT21}},
+  year         = {2021},
+  month        = nov,
+  entrysubtype = {workshop},
+  eprint       = {https://arxiv.org/abs/2109.11247},
 }
 
 @InProceedings{jiang2021learning,
@@ -269,6 +308,16 @@ The code and dataset are publicly available at \url{https://github.com/rgwt123/S
   timestamp    = {2020-05-01},
 }
 
+@InProceedings{zhao2021volctrans,
+  author       = {Chengqi Zhao and Zhicheng Liu and Jian Tong and Tao Wang and Mingxuan Wang and Rong Ye and Qianqian Dong and Jun Cao and Lei Li},
+  booktitle    = {The International Conference on Spoken Language Translation (IWSLT)},
+  title        = {The {Volctrans} Neural Speech Translation System for {IWSLT} 2021},
+  year         = {2021},
+  month        = aug,
+  entrysubtype = {workshop},
+  eprint       = {https://arxiv.org/abs/2105.07319},
+}
+
 @InProceedings{jing2021adversarial,
   author    = {Mingxuan Jing and Wenbing Huang and Fuchun Sun and Xiaojian Ma and Tao Kong and Chuang Gan and Lei Li},
   booktitle = {Proceedings of the 38th International Conference on Machine Learning (ICML)},
@@ -504,33 +553,6 @@ The code and dataset are publicly available at \url{https://github.com/rgwt123/S
   monthfiled  = dec,
   title       = {Method and Device for Push-Notifying Information},
   comment     = {用于推送信息的方法和装置},
-}
-
-
-@InProceedings{huang2022non,
-  author    = {Chenyang Huang and Hao Zhou and Osmar Zaiane and Lili Mou and Lei Li},
-  booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence (AAAI)},
-  title     = {Non-Autoregressive Translation with Layer-Wise Prediction and Deep Supervision},
-  year      = {2022},
-  month     = feb,
-  eprint    = {https://arxiv.org/abs/2110.07515},
-}
-
-@InProceedings{chen2022loren,
-  author    = {Jiangjie Chen and Qiaoben Bao and Changzhi Sun and Xinbo Zhang and Jiaze Chen and Hao Zhou and Yanghua Xiao and Lei Li},
-  booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence (AAAI)},
-  title     = {LOREN: Logic-Regularized Reasoning for Interpretable Fact Verification},
-  year      = {2022},
-  month     = feb,
-  eprint    = {https://arxiv.org/abs/2012.13577},
-}
-
-@InProceedings{chen2022unsupervised,
-  author    = {Jiangjie Chen and Chun Gan and Sijie Cheng and Hao Zhou and Yanghua Xiao and Lei Li},
-  booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence (AAAI)},
-  title     = {Unsupervised Editing for Counterfactual Stories},
-  year      = {2022},
-  month     = feb,
 }
 
 @InProceedings{dong2021consecutive,
@@ -1967,38 +1989,66 @@ clickbait detection and generic text classification tasks demonstrate that our p
   file      = {:pubs/li2006providing - Providing an Uncertainty Reasoning Service for Semantic Web Application.pdf:PDF},
 }
 
-@Unpublished{baoDraftpnat,
+@Unpublished{baoPreprintpnat,
   author = {Yu Bao and Hao Zhou and Jiangtao Feng and Mingxuan Wang and Shujian Huang and Jiajun Chen and Lei Li},
   note   = {in submission},
-  eprint = {https://arxiv.org/abs/1911.10677},
   title  = {{PNAT}: Non-autoregressive Transformer by Position Learning},
-  year   = {Draft},
+  year   = {Preprint},
+  eprint = {https://arxiv.org/abs/1911.10677},
 }
 
-@Noshow{liDraftbidirectional,
+@Unpublished{chenPreprintmtg,
+  author = {Yiran Chen and Zhenqiao Song and Xianze Wu and Danqing Wang and Jingjing Xu and Jiaze Chen and Hao Zhou and Lei Li},
+  title  = {{MTG}: A Benchmarking Suite for Multilingual Text Generation},
+  year   = {Preprint},
+  eprint = {https://arxiv.org/abs/2108.07140},
+}
+
+@Noshow{liPreprintbidirectional,
   author = {Mingwei Li and Qingyuan Jiang and Yi He and Lei Li and Wujun Li},
   title  = {Bidirectional Attentive Convolutional Neural Network for Near-Duplicate Video Retrieval},
-  year   = {Draft},
+  year   = {Preprint},
 }
 
-@Unpublished{sunDraftdiving,
+@Unpublished{sunPreprintcapturing,
   author = {Zewei Sun and Mingxuan Wang and Hao Zhou and Chengqi Zhao and Shujian Huang and Jiajun Chen and Lei Li},
   title  = {Capturing Longer Context for Document-level Neural Machine Translation: A Multi-resolutional Approach},
+  year   = {Preprint},
   eprint = {https://arxiv.org/abs/2010.08961},
-  year   = {Draft},
 }
 
-@Noshow{tianDraftconversational,
+@Noshow{tianPreprintconversational,
   author = {Youzhi Tian and Zhou Yu and Cheng Yang and Hang Li and Lei Li},
   title  = {Conversational Contextualized Multimodal Representation Learning},
-  year   = {Draft},
+  year   = {Preprint},
 }
 
-@Unpublished{yanDraftcross,
+@Unpublished{wangPreprintlightseq2,
+  author = {Xiaohui Wang and Ying Xiong and Xian Qian and Yang Wei and Lei Li and Mingxuan Wang},
+  title  = {{LightSeq2}: Accelerated Training for Transformer-based Models on GPUs},
+  year   = {Preprint},
+  eprint = {https://arxiv.org/abs/2110.05722},
+}
+
+@Unpublished{xuPreprintreciprocal,
+  author = {Minkai Xu and Mingxuan Wang and Zhouhan Lin and Hao Zhou and Weinan Zhang and Lei Li},
+  title  = {Reciprocal Supervised Learning Improves Neural Machine Translation},
+  year   = {Preprint},
+  eprint = {https://arxiv.org/abs/2012.02975},
+}
+
+@Unpublished{xuPreprintsurvey,
+  author = {Jingjing Xu and Wangchunshu Zhou and Zhiyi Fu and Hao Zhou and Lei Li},
+  title  = {A Survey on Green Deep Learning},
+  year   = {Preprint},
+  eprint = {https://arxiv.org/abs/2111.05193},
+}
+
+@Unpublished{yanPreprintcross,
   author = {An Yan and Xin Wang and Jiangtao Feng and Lei Li and William Yang Wang},
   title  = {Cross-Lingual Vision-Language Navigation},
+  year   = {Preprint},
   eprint = {https://arxiv.org/abs/1910.11301},
-  year   = {Draft},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
